--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="./public/images/favicon.ico" />
-        <link rel="stylesheet" href="./public/css/style.css" />
-        <link rel="stylesheet" media="screen" href="./public/css/ie.css">
+        <!-- <link rel="icon" href="./public/images/favicon.ico" /> -->
+        <link rel="stylesheet" href="./public/css/reset.css" />
+        <link rel="stylesheet" href="./public/css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Viki's pet nursery</title>
     </head>
